--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --ButtonBgColor: #e1dbd6;
+  --ButtonTextColorDark: black;
+  --ButtonTextColorLight: rgb(255, 255, 255);
 }
 
 @theme inline {
