--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,14 @@ body {
 .headerbasket {
   anchor-name: --basket;
 }
+.grid-layout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 50px;
+}
+.number {
+  border: solid red;
+  z-index: 9;
+  grid-column: 2;
+  grid-row: 1;
+}
